--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "angularfire2": "^5.2.1",
+    "firebase": "^6.3.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
