--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "firebase": "^6.3.1",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
