--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularfire2": "^5.2.1",
     "firebase": "^6.3.1",
     "ionic-angular": "3.9.5",
+    "ionic-long-press": "^1.5.0",
     "ionicons": "3.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
